# fbe3_gnome_fork

./: README.md  com.lapas.Fbe.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.lapas.Fbe.json/: init
.flatpak-builder/checksums/: x86_64-com.lapas.Fbe.json
data/: com.lapas.Fbe.desktop.in  com.lapas.Fbe.gschema.xml  com.lapas.Fbe.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: TODO.md  base.py  device_editor.py  device_renderer.py  dialog.ui  ecc_editor.py  ecc_renderer.py  export.py  fb_editor.py  fb_renderer.py  fbe.gresource.xml  fbe.in  function_block.py  main.py  menu.ui  meson.build  project_editor.py  resource_editor.py  system_config_editor.py  system_editor.py  system_renderer.py  window.py  window.ui  xmlParser.py
src/gtk/: help-overlay.ui
src/models/fb_library/: .project  E_SWITCH_1.fbt  FbeTestProject.sys  fbe_testing.sys  fbe_testing_0.sys  tt.sub
src/models/fb_library/testing/: .project  testing.sys
src/models/new_library/: E_CYCLE.fbt  E_TESTE.fbt  FbeTestProject.sys
